--- a/colin-app/package.json
+++ b/colin-app/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "gatsby": "^1.0.1",
     "gatsby-link": "^1.0.1",
-    "gatsby-plugin-react-helmet": "^1.0.1"
+    "gatsby-plugin-react-helmet": "^1.0.1",
+    "react-onscroll": "^1.0.4"
   },
   "keywords": [
     "gatsby"
